@@ -1,20 +1,5 @@
 package uk.gov.hmcts.reform.iacaseapi.domain.handlers.postsubmit;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.reset;
-import static org.mockito.Mockito.when;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.DECIDE_AN_APPLICATION_ID;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.MAKE_AN_APPLICATIONS;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.REASON_FOR_LINK_APPEAL;
-
-import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -38,6 +23,23 @@ import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.callback.Callback;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.callback.PostSubmitCallbackResponse;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.Document;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.IdValue;
+import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.YesOrNo;
+
+import java.time.LocalDate;
+import java.util.List;
+import java.util.Optional;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.reset;
+import static org.mockito.Mockito.when;
+import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.DECIDE_AN_APPLICATION_ID;
+import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.IS_INTEGRATED;
+import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.MAKE_AN_APPLICATIONS;
+import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.REASON_FOR_LINK_APPEAL;
 
 @MockitoSettings(strictness = Strictness.LENIENT)
 @ExtendWith(MockitoExtension.class)
@@ -70,7 +72,9 @@ class DecideAnApplicationConfirmationTest {
 
     @ParameterizedTest
     @ValueSource(strings = {
-        "Adjourn", "Expedite", "Transfer",
+        "Adjourn",
+        "Expedite",
+        "Transfer",
         "Link/unlink appeals",
         "Judge's review of application decision",
         "Reinstate an ended appeal",
@@ -79,14 +83,15 @@ class DecideAnApplicationConfirmationTest {
         "Update hearing requirements",
         "Withdraw"
     })
-    void should_return_valid_confirmation_message_for_granted(String type) {
+    void ifGranted_whenIsIntegrated_returnValidConfirmationMessage(String type) {
 
         when(dateProvider.now()).thenReturn(LocalDate.MAX);
-        List<IdValue<Document>> evidence =
-            Arrays.asList(new IdValue<>("1",
-                new Document("http://localhost/documents/123456",
-                    "http://localhost/documents/123456",
-                    "DocumentName.pdf")));
+        List<IdValue<Document>> evidence = List.of(new IdValue<>("1",
+            new Document("http://localhost/documents/123456",
+                "http://localhost/documents/123456",
+                "DocumentName.pdf"
+            )
+        ));
         MakeAnApplication makeAnApplication =
             new MakeAnApplication("Legal representative", type, "A reason to update appeal details",
                 evidence, dateProvider.now().toString(), "Pending",
@@ -94,129 +99,104 @@ class DecideAnApplicationConfirmationTest {
         makeAnApplication.setApplicantRole("caseworker-ia-caseofficer");
         makeAnApplication.setDecision("Granted");
         final List<IdValue<MakeAnApplication>> makeAnApplications =
-            Arrays.asList(new IdValue<>("1", makeAnApplication));
+            List.of(new IdValue<>("1", makeAnApplication));
 
         when(asylumCase.read(DECIDE_AN_APPLICATION_ID, String.class)).thenReturn(Optional.of("1"));
         when(asylumCase.read(MAKE_AN_APPLICATIONS)).thenReturn(Optional.of(makeAnApplications));
         when(asylumCase.read(REASON_FOR_LINK_APPEAL, ReasonForLinkAppealOptions.class))
             .thenReturn(Optional.of(ReasonForLinkAppealOptions.BAIL));
+        when(asylumCase.read(IS_INTEGRATED, YesOrNo.class)).thenReturn(Optional.of(YesOrNo.YES));
 
         PostSubmitCallbackResponse callbackResponse = decideAnApplicationConfirmation.handle(callback);
 
         assertNotNull(callbackResponse);
-        assertThat(
-            callbackResponse.getConfirmationHeader().get())
-            .contains("You have decided an application");
+        assertThat(callbackResponse.getConfirmationHeader()).contains("# You have decided an application");
 
-        switch (type) {
-            case "Adjourn":
-            case "Expedite":
-            case "Transfer":
-                assertThat(
-                    callbackResponse.getConfirmationBody().get())
-                    .contains(
-                        "#### What happens next\n\n"
-                            +
-                            "The application decision has been recorded and is now available in the applications tab. "
-                            +
-                            "You need to tell the listing team to relist the case. Once the case is relisted a new Notice of Hearing "
-                            + "will be sent to all parties.");
-                break;
+        long id = callback.getCaseDetails().getId();
+        String expectedBody = switch (type) {
+            case "Adjourn" -> "#### What happens next\n\n"
+                    + "The application decision has been recorded and is now available in the applications tab. "
+                    + "You must now [record the details of the adjournment]"
+                    + "(/case/IA/Asylum/" + id + "/trigger/recordAdjournmentDetails).";
 
-            case "Link/unlink appeals":
-                assertThat(
-                    callbackResponse.getConfirmationBody().get())
-                    .contains(
-                        "#### What happens next\n\n"
-                            +
-                            "The application decision has been recorded and is now available in the applications tab. "
-                            + "You must now [link the appeal](/case/IA/Asylum/"
-                            + callback.getCaseDetails().getId() + "/trigger/linkAppeal)"
-                            + " or [unlink the appeal](/case/IA/Asylum/"
-                            + callback.getCaseDetails().getId() + "/trigger/unlinkAppeal).");
-                break;
+            case "Expedite", "Transfer" -> "#### What happens next\n\n"
+                    + "The application decision has been recorded and is now available in the applications tab. "
+                    + "You must now [update the hearing request]"
+                    + "(/case/IA/Asylum/" + id + "/trigger/updateHearingRequest).";
 
-            case "Judge's review of application decision":
-                assertThat(
-                    callbackResponse.getConfirmationBody().get())
-                    .contains(
-                        "#### What happens next\n\n"
-                            +
-                            "The application decision has been recorded and is now available in the applications tab. "
-                            + "Both parties will receive a notification detailing your decision"
-                    );
-                break;
+            case "Link/unlink appeals" -> "#### What happens next\n\n"
+                    + "The application decision has been recorded and is now available in the applications tab. "
+                    + "You must now [link the appeal](/case/IA/Asylum/"
+                    + id + "/trigger/linkAppeal)"
+                    + " or [unlink the appeal](/case/IA/Asylum/"
+                    + id + "/trigger/unlinkAppeal).";
 
-            case "Reinstate an ended appeal":
-                assertThat(
-                    callbackResponse.getConfirmationBody().get())
-                    .contains(
-                        "#### What happens next\n\n"
-                            +
-                            "The application decision has been recorded and is now available in the applications tab. "
-                            + "You now need to [reinstate the appeal](/case/IA/Asylum/"
-                            + callback.getCaseDetails().getId() + "/trigger/reinstateAppeal)"
-                    );
-                break;
+            case "Judge's review of application decision" -> "#### What happens next\n\n"
+                    + "The application decision has been recorded and is now available in the applications tab. "
+                    + "Both parties will receive a notification detailing your decision.";
 
-            case "Time extension":
-                assertThat(
-                    callbackResponse.getConfirmationBody().get())
-                    .contains(
-                        "#### What happens next\n\n"
-                            +
-                            "The application decision has been recorded and is now available in the applications tab. "
-                            + "You must now [change the direction's due date](/case/IA/Asylum/"
-                            + callback.getCaseDetails().getId() + "/trigger/changeDirectionDueDate)"
-                    );
-                break;
+            case "Reinstate an ended appeal" -> "#### What happens next\n\n"
+                    + "The application decision has been recorded and is now available in the applications tab. "
+                    + "You now need to [reinstate the appeal](/case/IA/Asylum/" + id + "/trigger/reinstateAppeal)";
 
-            case "Update appeal details":
-                assertThat(
-                    callbackResponse.getConfirmationBody().get())
-                    .contains(
-                        "#### What happens next\n\n"
-                            +
-                            "The application decision has been recorded and is now available in the applications tab. "
-                            + "You must now [update the appeal details](/case/IA/Asylum/"
-                            + callback.getCaseDetails().getId() + "/trigger/editAppealAfterSubmit)"
-                    );
-                break;
+            case "Time extension" -> "#### What happens next\n\n"
+                    + "The application decision has been recorded and is now available in the applications tab. "
+                    + "You must now [change the direction's due date](/case/IA/Asylum/"
+                    + id + "/trigger/changeDirectionDueDate)";
 
-            case "Update hearing requirements":
-                assertThat(
-                    callbackResponse.getConfirmationBody().get())
-                    .contains(
-                        "#### What happens next\n\n"
-                            +
-                            "The application decision has been recorded and is now available in the applications tab. "
-                            + "You must now [update the hearing requirements](/case/IA/Asylum/"
-                            + callback.getCaseDetails().getId() + "/trigger/updateHearingRequirements)"
-                    );
-                break;
+            case "Update appeal details" -> "#### What happens next\n\n"
+                    + "The application decision has been recorded and is now available in the applications tab. "
+                    + "You must now [update the appeal details](/case/IA/Asylum/"
+                    + id + "/trigger/editAppealAfterSubmit)";
 
-            case "Withdraw":
-                assertThat(
-                    callbackResponse.getConfirmationBody().get())
-                    .contains(
-                        "#### What happens next\n\n"
-                            +
-                            "The application decision has been recorded and is now available in the applications tab. "
-                            + "You must now [end the appeal](/case/IA/Asylum/"
-                            + callback.getCaseDetails().getId() + "/trigger/endAppeal)"
-                    );
-                break;
+            case "Update hearing requirements" -> "#### What happens next\n\n"
+                    + "The application decision has been recorded and is now available in the applications tab. "
+                    + "You must now [update the hearing requirements](/case/IA/Asylum/"
+                    + id + "/trigger/updateHearingRequirements)";
 
-            default:
-                assertThat(
-                    callbackResponse.getConfirmationBody().get())
-                    .contains(
-                        "#### What happens next\n\n"
-                            +
-                            "The application decision has been recorded and is now available in the applications tab. "
-                    );
+            case "Withdraw" -> "#### What happens next\n\n"
+                    + "The application decision has been recorded and is now available in the applications tab. "
+                    + "You must now [end the appeal](/case/IA/Asylum/" + id + "/trigger/endAppeal)";
 
-        }
+            default -> "#### What happens next\n\n"
+                    + "The application decision has been recorded and is now available in the applications tab. ";
+        };
+        assertThat(callbackResponse.getConfirmationBody()).contains(expectedBody);
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"Adjourn", "Expedite", "Transfer"})
+    void ifGranted_whenNotIntegrated_returnValidConfirmationMessage(String type) {
+        when(dateProvider.now()).thenReturn(LocalDate.MAX);
+        List<IdValue<Document>> evidence = List.of(new IdValue<>("1",
+            new Document("http://localhost/documents/123456",
+                "http://localhost/documents/123456",
+                "DocumentName.pdf"
+            )
+        ));
+        MakeAnApplication makeAnApplication = new MakeAnApplication(
+            "Legal representative", type, "A reason to update appeal details", evidence, dateProvider.now().toString(),
+            "Pending", State.LISTING.toString()
+        );
+        makeAnApplication.setApplicantRole("caseworker-ia-caseofficer");
+        makeAnApplication.setDecision("Granted");
+        final List<IdValue<MakeAnApplication>> makeAnApplications = List.of(new IdValue<>("1", makeAnApplication));
+
+        when(asylumCase.read(DECIDE_AN_APPLICATION_ID, String.class)).thenReturn(Optional.of("1"));
+        when(asylumCase.read(MAKE_AN_APPLICATIONS)).thenReturn(Optional.of(makeAnApplications));
+        when(asylumCase.read(REASON_FOR_LINK_APPEAL, ReasonForLinkAppealOptions.class))
+            .thenReturn(Optional.of(ReasonForLinkAppealOptions.BAIL));
+        when(asylumCase.read(IS_INTEGRATED, YesOrNo.class)).thenReturn(Optional.of(YesOrNo.NO));
+
+        PostSubmitCallbackResponse callbackResponse = decideAnApplicationConfirmation.handle(callback);
+
+        assertNotNull(callbackResponse);
+        assertThat(callbackResponse.getConfirmationHeader()).contains("# You have decided an application");
+
+        assertThat(callbackResponse.getConfirmationBody()).contains(
+            "#### What happens next\n\nThe application decision has been recorded and is now available in"
+            + " the applications tab. You need to tell the listing team to relist the case. Once the case is relisted"
+            + " a new Notice of Hearing will be sent to all parties.");
     }
 
     @Test
@@ -224,7 +204,7 @@ class DecideAnApplicationConfirmationTest {
 
         when(dateProvider.now()).thenReturn(LocalDate.MAX);
         List<IdValue<Document>> evidence =
-            Arrays.asList(new IdValue<>("1",
+            List.of(new IdValue<>("1",
                 new Document("http://localhost/documents/123456",
                     "http://localhost/documents/123456",
                     "DocumentName.pdf")));
@@ -234,8 +214,7 @@ class DecideAnApplicationConfirmationTest {
                 State.LISTING.toString());
         makeAnApplication.setApplicantRole("caseworker-ia-caseofficer");
         makeAnApplication.setDecision("Refused");
-        final List<IdValue<MakeAnApplication>> makeAnApplications =
-            Arrays.asList(new IdValue<>("1", makeAnApplication));
+        final List<IdValue<MakeAnApplication>> makeAnApplications = List.of(new IdValue<>("1", makeAnApplication));
 
         when(asylumCase.read(DECIDE_AN_APPLICATION_ID, String.class)).thenReturn(Optional.of("1"));
         when(asylumCase.read(MAKE_AN_APPLICATIONS)).thenReturn(Optional.of(makeAnApplications));
@@ -243,17 +222,13 @@ class DecideAnApplicationConfirmationTest {
         PostSubmitCallbackResponse callbackResponse = decideAnApplicationConfirmation.handle(callback);
 
         assertNotNull(callbackResponse);
-        assertThat(
-            callbackResponse.getConfirmationHeader().get())
-            .contains("You have decided an application");
+        assertThat(callbackResponse.getConfirmationHeader().orElseThrow()).contains("You have decided an application");
 
-        assertThat(
-            callbackResponse.getConfirmationBody().get())
-            .contains(
-                "#### What happens next\n\n"
-                    + "The application decision has been recorded and is now available in the applications tab. "
-                    + "Both parties will be notified that the application was refused."
-            );
+        assertThat(callbackResponse.getConfirmationBody().orElseThrow()).contains(
+            "#### What happens next\n\n"
+                + "The application decision has been recorded and is now available in the applications tab. "
+                + "Both parties will be notified that the application was refused."
+        );
     }
 
     @Test
